# pokemon

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  clippy.toml  deny.toml
.cargo/: mutants.toml
.github/workflows/: ci.yml  cut-release.yml  pages.yml  release.yml
crates/pksave/: Cargo.toml
crates/pksave-app/: Cargo.toml  Trunk.toml  index.html
crates/pksave-app/assets/: InfoPlist.ext.plist
crates/pksave-app/assets/web/: manifest.json  robots.txt  sitemap.xml
crates/pksave-app/src/: app.rs  error.rs  io.rs  main.rs  sdcard.rs  widgets.rs
crates/pksave-app/src/history/: fs.rs  idb.rs  mod.rs  spans.rs
crates/pksave-app/src/screens/: boxes.rs  flags.rs  hex.rs  history.rs  hof.rs  items.rs  map.rs  mod.rs  overview.rs  party.rs  pokedex.rs  trainer.rs
crates/pksave-app/src/screens/storage/: detail.rs  editor.rs  mod.rs  slots.rs  transfer.rs  widget_tests.rs
crates/pksave/fuzz/: .gitignore  Cargo.toml
crates/pksave/fuzz/fuzz_targets/: save_walk.rs
crates/pksave/src/: fuzz_support.rs  lib.rs
crates/pksave/src/gen1/: bcd.rs  boxes.rs  checksum.rs  daycare.rs  detect.rs  engine_state.rs  events.rs  flags.rs  hof.rs  items.rs  map.rs  mod.rs  offsets.rs  party.rs  pokedex.rs  pokemon.rs  save.rs  stats.rs  text.rs  trainer.rs  validate.rs
crates/pksave/src/gen1/data/: mod.rs
crates/pksave/tests/: boxes.rs  checksums.rs  codecs.rs  data_tables.rs  daycare.rs  diagnostics.rs  edit_isolation.rs  edit_isolation_misc.rs  edit_isolation_party.rs  events_map.rs  hof.rs  items.rs  party.rs  pokedex.rs  pokemon.rs  raw_edit.rs  roundtrip.rs  trainer.rs
crates/pksave/tests/snapshots/: diagnostics__multi_broken_save_snapshot.snap
crates/xtask/: Cargo.toml
crates/xtask/src/: charmap.rs  e2e_fixtures.rs  gen_tables.rs  main.rs  offsets_check.rs  pins.rs
docs/: DISTRIBUTION.md  FORMAT.md
e2e/: README.md  conftest.py  gb.py  requirements.txt  test_boot_edited_saves.py  test_pc_withdrawal.py
