[workspace]
resolver = "2"
members = ["crates/pksave", "crates/pksave-app", "crates/xtask"]
# The fuzz crate (nightly + libFuzzer only) builds as its own workspace.
exclude = ["crates/pksave/fuzz"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/kasbuunk/pokemon"

[workspace.lints.clippy]
unwrap_used = "deny"
