[package]
name = "pksave-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eframe = "0.35.0"
egui = "0.35.0"
egui_extras = "0.35.0"
log = "0.4.33"
pksave = { path = "../pksave" }
rfd = "0.17.2"

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.11"
pollster = "1.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = ["Window", "BeforeUnloadEvent", "Document", "Element", "HtmlCanvasElement", "EventTarget"] }
