[package]
name = "pksave-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eframe = "0.35.0"
egui = "0.35.0"
egui_extras = "0.35.0"
log = "0.4.33"
pksave = { path = "../pksave" }
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pure-Rust SHA-256 (wasm-compatible): content-addressing of history
# version blobs and the wasm save-identity key.
sha2 = "0.10"
thiserror = "2"

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.11"
pollster = "1.0.1"

# SD-card discovery: mount enumeration on Linux/Windows (macOS uses
# /Volumes via std::fs and skips this dependency).
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos")))'.dependencies]
sysinfo = { version = "0.39.6", default-features = false, features = ["disk"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3"

# macOS bundling (cargo-bundle): a signed .app with the removable-volumes
# usage description gets a stable TCC prompt for SD-card scanning.
# The identifier keeps the historical "pksave" name on purpose:
# changing it would reset existing users' TCC (removable volumes)
# grants. Only the display name carries the product name.
[package.metadata.bundle]
name = "Pokémon SRM Editor"
identifier = "com.kasbuunk.pksave"
osx_info_plist_exts = ["assets/InfoPlist.ext.plist"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.103"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = [
    "Window",
    "BeforeUnloadEvent",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "EventTarget",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlElement",
    # IndexedDB bindings for the wasm history store.
    "Event",
    "IdbDatabase",
    "IdbFactory",
    "IdbKeyRange",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
] }

[dev-dependencies]
egui_kittest = { version = "0.35", features = ["eframe"] }
