[package]
name = "pksave"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fault-tolerant Pokémon Generation 1 (Red/Blue/Yellow) save file library"

[lints]
workspace = true

[dependencies]
thiserror = "2"

[dev-dependencies]
proptest = "1"
insta = "1"
